apps/argo/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  entryPoints:
    - websecure
  tls:
    secretName: tls-certificate
  routes:
    - match: Host(`argocd.matiix310.dev`)
      kind: Rule
      services:
        - name: argocd-server
          port: 443
          scheme: https
          serversTransport: traefik-argocd-transport
